--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,45 +1,115 @@
-site_name: The Method on AWS - Guideline
+site_name: The Method on AWS
 site_description: Comprehensive guideline for applying The Method from "Righting Software" to AWS serverless services
-site_author: The Method on AWS Team
+site_author: Dima Kramskoy
+site_url: https://dimakramskoy.github.io/the-method-aws-guide/
 
 # Repository
-repo_name: the-method-on-aws
-repo_url: https://github.com/your-org/the-method-on-aws
+repo_name: DimaKramskoy/the-method-aws-guide
+repo_url: https://github.com/DimaKramskoy/the-method-aws-guide
+edit_uri: edit/main/docs/
+
+# Copyright
+copyright: Copyright &copy; 2024 Dima Kramskoy. Based on "Righting Software" by Juval Löwy.
 
 # Theme configuration
 theme:
   name: material
+  language: en
+  logo: assets/logo.svg
+  favicon: assets/favicon.svg
+
+  # Color palette - Dark mode as default
   palette:
-    # Light mode
-    - scheme: default
-      primary: indigo
-      accent: indigo
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    # Dark mode
-    - scheme: slate
-      primary: indigo
-      accent: indigo
+    # Dark mode (default)
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep purple
+      accent: purple
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+    # Light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: deep purple
+      accent: purple
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+  # Font configuration
+  font:
+    text: Roboto
+    code: Roboto Mono
+
+  # Features
   features:
-    - navigation.tabs
-    - navigation.sections
-    - navigation.expand
-    - navigation.top
-    - search.suggest
-    - search.highlight
-    - content.code.copy
-    - content.code.annotate
+    # Navigation
+    - navigation.instant        # Instant loading
+    - navigation.instant.progress  # Progress indicator
+    - navigation.tracking       # URL updates with scroll
+    - navigation.tabs           # Top-level tabs
+    - navigation.tabs.sticky    # Sticky tabs
+    - navigation.sections       # Section navigation
+    - navigation.expand         # Expand sections by default
+    - navigation.path           # Breadcrumbs
+    - navigation.indexes        # Section index pages
+    - navigation.top            # Back to top button
+    - navigation.footer         # Previous/next footer
+
+    # Table of contents
+    - toc.follow                # TOC follows scroll
+    - toc.integrate             # TOC integrated in nav
+
+    # Search
+    - search.suggest            # Search suggestions
+    - search.highlight          # Highlight search terms
+    - search.share              # Share search results
+
+    # Content
+    - content.code.copy         # Copy code button
+    - content.code.annotate     # Code annotations
+    - content.tabs.link         # Link content tabs
+    - content.tooltips          # Tooltips
+    - content.action.edit       # Edit button
+    - content.action.view       # View source button
 
 # Extensions
 markdown_extensions:
+  # Python Markdown
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - tables
+  - toc:
+      permalink: true
+      permalink_title: Anchor link to this section
+      toc_depth: 3
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.snippets:
+      auto_append:
+        - includes/abbreviations.md
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -47,16 +117,10 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
-  - admonition
-  - pymdownx.details
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - attr_list
-  - md_in_html
-  - tables
-  - toc:
-      permalink: true
+      combine_header_slug: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
 
 # Navigation structure
 nav:
@@ -84,10 +148,30 @@ nav:
 
 # Plugins
 plugins:
-  - search
+  - search:
+      separator: '[\s\-,:!=\[\]()"/]+|(?!\b)(?=[A-Z][a-z])|\.(?!\d)|&[lg]t;'
+      lang: en
 
 # Extra
 extra:
+  # Social links
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/your-org/the-method-on-aws
+      link: https://github.com/DimaKramskoy/the-method-aws-guide
+      name: GitHub Repository
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/dimakramskoy/
+      name: LinkedIn Profile
+
+  # Analytics (add later if needed)
+  # analytics:
+  #   provider: google
+  #   property: G-XXXXXXXXXX
+
+  # Version selector (for future versions)
+  version:
+    provider: mike
+    default: latest
+
+  # Generator notice
+  generator: false
